0.59 (12.19.2005) - John Siracusa <siracusa@mindspring.com>

    * Fixed a bug that caused certain method overrides to fail when
      using a custom metadata class with the auto-initialize feature.
      (Reported by Svilen Ivanov)

0.58 (12.16.2005) - John Siracusa <siracusa@mindspring.com>

    * Added auto-detection of multiple sequence-based primary 
      key columns and primary keys with one or more non-sequence-
      based columns.
    * Added support for schema and catalog overrides.
    * Added tests for db migration with forced and default schemas,
      multiple sequence-based primary key columns, and primary keys
      with one or more non-sequence-based columns, migrating to and
      from databases with and without sequence support.  (Whew!)
    * Added a summary of the default conventions to the 
      Rose::DB::Object::ConventionManager documentation.

0.57 (12.04.2005) - John Siracusa <siracusa@mindspring.com>

    * Fixed broken custom convention manager support in the loader.

0.56 (12.03.2005) - John Siracusa <siracusa@mindspring.com>

    * Updated required Rose::DB version.  The 0.55 release was incorrect.

0.55 (12.03.2005) - John Siracusa <siracusa@mindspring.com>

    * Added get_objects_from_sql() and make_manager_method_from_sql()
      Manager methods.
    * Made the use of prepare_cached() optional everywhere.  It's on
      by default in Rose::DB::Object, but off by default in Manager.
      Class data determines the defaults.
    * Added enum column type.

0.54 (11.30.2005) - John Siracusa <siracusa@mindspring.com>

    * Added SQLite support.
    * Improved auto-detection of primary key sequence names.
    * Made primary key sequence names configurable.
    * Added the "with_map_records" Manager parameter used to fetch map
      records when auto-joining through a "many to many" relationship.
    * Fixed a bug in the MySQL foreign key auto-init system.
      (Reported by Bernhard Graf)