@@ -102,6 +102,11 @@ SKIP: foreach my $db_type (qw(pg)) #pg_with_schema
         start      => '2001-01-02',
         save_col   => [ 1, 5 ],
         nums       => '{1,2,3}',
+        nums       => { all_in_array => [ 1, 3 ] },
+        '!nums'    => { all_in_array => [ 1, 5, 9 ] }, 
+        #'!nums'    => { all_in_set => [ 1, 5, 9 ] }, 
+        nums       => { in_array => [ 2, 17 ] }, 
+        '!nums'    => { in_array => 99 }, 
         last_modified => { le => 'now' },
         date_created  => '2004-03-30 12:34:56',
         status        => { like => 'AC%', field => 'UPPER(status)' },
@@ -4716,6 +4721,7 @@ SKIP: foreach my $db_type (qw(informix))
         nums       => { in_set => [ 2, 22, 222 ] },
         nums       => { in_set => 2 },
         nums       => { all_in_set => [ 1, 2, 3 ] },
+        '!nums'    => { all_in_set => [ 1, 2, 72 ] },
       ],
       limit   => 5,
       sort_by => 'id');
